<resources>
    <string name="app_name">ProjectPAPB</string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_call">Call</string>
    <string name="nav_direction">Direction</string>
    <string name="review">Review</string>
    <string name="nav_detail">Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Tanggal">EEEE, dd MMM</string>
    <string name="suhu">99</string>
    <string name="celcius">c</string>
    <string name="city">Malang</string>
    <string name="weather_desc">Sunny</string>
    <string name="image_food">Image</string>
    <string name="rest_name">Restoran</string>
    <string name="title_activity_edit">editActivity</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="nav_addComment">Add</string>
</resources>
